--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -1,3 +1,8 @@
+/* General styles */
+body {
+    font-family: 'Lato', Arial, sans-serif;
+}
+
 /* Hide dark mode logo in light mode */
 .logo-dark {
     display: none;
@@ -6,11 +11,6 @@
 /* Show light mode logo in light mode */
 .logo-light {
     display: inline;
-}
-
-/* General styles */
-body {
-    font-family: Arial, sans-serif;
 }
 
 .navbar {
@@ -27,15 +27,15 @@ body {
     text-decoration: none;
 }
 
-.navbar a:hover {
-    background-color: #ddd;
-    color: black;
-}
 
+
+/* Remove hover effect from logo and profile avatar */
 .navbar-brand img,
 .navbar-avatar {
-    transition: none; /* Remove hover effect */
+    transition: none !important;
 }
+
+
 
 .navbar-brand img {
     height: 40px;
@@ -154,6 +154,7 @@ body {
 
 /* Modal styling */
 .modal-content {
+    font-family: 'Lato', Arial, sans-serif;
     border-radius: 10px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
@@ -169,6 +170,7 @@ body {
 }
 
 .modal-title {
+    font-family: 'Lato', Arial, sans-serif;
     font-weight: bold;
     color: #333;
 }
@@ -178,6 +180,7 @@ body {
 }
 
 .modal-body {
+    font-family: 'Lato', Arial, sans-serif;
     background-color: #ffffff;
     color: #333;
 }
@@ -207,15 +210,12 @@ body {
 }
 
 /* Kanban task and column styles */
-
-
 .kanban-task .btn {
-    width: 23%; /* Ensure buttons are the same size */
+    width: 23%;
     display: inline-block;
 }
 
 .kanban-column {
-   
     margin: 5px;
     padding: 10px;
     background-color: #ffffff;
