--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,6 +1,15 @@
 /* General styles */
-body {
+body, html {
     font-family: 'Lato', Arial, sans-serif;
+    margin: 0;
+    padding: 0; 
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+}
+
+.search-results-container {
+    margin-top: 90px;
 }
 
 /* Hide dark mode logo in light mode */
@@ -13,29 +22,34 @@ body {
     display: inline;
 }
 
+/* Navbar styles */
 .navbar {
     background-color: #e6e6ea;
     overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
+    padding: 0 10px; 
 }
 
 .navbar a {
-    float: left;
     display: block;
     color: #333;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 10px; 
     text-decoration: none;
+    white-space: nowrap; 
 }
-
-
 
 /* Remove hover effect from logo and profile avatar */
 .navbar-brand img,
 .navbar-avatar {
     transition: none !important;
 }
-
-
 
 .navbar-brand img {
     height: 40px;
@@ -221,23 +235,36 @@ body {
     background-color: #ffffff;
 }
 
-/* Media queries for small devices */
+/* Main content adjustment for navbar */
+.kanban-container {
+    margin-top: 60px; 
+}
+
+/* Media query for small devices */
 @media (max-width: 600px) {
-    .modal-content {
-        width: 80%;
-        margin: auto;
+    .navbar {
+        padding: 10px; 
+        overflow: visible; 
+        flex-direction: column; 
+        align-items: flex-start; 
     }
-
-    .navbar-brand, .navbar-toggler {
-        display: flex;
-        align-items: center;
+    .navbar-nav {
+        flex-direction: column; 
+        align-items: flex-start; 
     }
-
+    .navbar-nav .nav-item {
+        margin-bottom: 10px; 
+    }
+    .navbar-brand img {
+        height: 30px; 
+    }
+    .dropdown {
+        order: 3; 
+    }
     .navbar-avatar {
-        margin-left: 10px;
-    }
-
-    .button-container .btn {
-        width: 100%;
+        margin-left: 0; 
+        margin-bottom: 10px; 
     }
 }
+
+
