--- a/staticfiles/css/kanban.css
+++ b/staticfiles/css/kanban.css
@@ -1,5 +1,10 @@
-body {
+body, html {
     font-family: 'Lato', Arial, sans-serif;
+    margin: 0; 
+    padding: 0; 
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden; 
 }
 
 .kanban-container {
@@ -7,6 +12,7 @@ body {
     flex-direction: column;
     align-items: center;
     margin: 20px;
+    margin-top: 100px; 
 }
 
 .button-container {
@@ -19,13 +25,15 @@ body {
 .kanban-board-wrapper {
     display: flex;
     overflow-x: auto;
-    max-width: 150%;
+    width: 130%; 
+    padding: 0 20px; 
 }
 
 .kanban-board {
     display: flex;
     align-items: flex-start;
-    gap: 10px;
+    gap: 20px; 
+    width: max-content;
 }
 
 .kanban-column {
@@ -33,8 +41,8 @@ body {
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    min-width: 350px;
-    max-width: 350px;
+    min-width: 360px; 
+    max-width: 360px; 
     height: 75vh;
     display: flex;
     flex-direction: column;
@@ -331,23 +339,70 @@ body {
     z-index: 9999;
 }
 
-@media (max-width: 600px) {
+/* Responsive Styles */
+
+/* Extra small devices (phones, 400px and down) */
+@media (max-width: 400px) {
+    .kanban-column {
+        min-width: 300px; 
+        max-width: 300px;
+        height: 55vh;
+    }
     .modal-content {
-        width: 90%;
         margin: auto;
     }
-
-    .navbar-brand, .navbar-toggler {
-        display: flex;
-        align-items: center;
-    }
-
-    .navbar-avatar {
-        margin-left: 10px;
-    }
-
-
-    .kanban-column {
-        height: 70vh; /* Adjusted height for small devices */
+    .kanban-board-wrapper {
+        margin-right: 50px;
     }
 }
+
+/* Small devices (landscape phones, 576px and up) */
+@media (max-width: 576px) {
+    .kanban-column {
+        min-width: 350px; 
+        max-width: 350px;
+        height: 60vh;
+    }
+    .modal-content {
+        margin: auto;
+    }
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (max-width: 768px) {
+    .kanban-column {
+        min-width: 350px; 
+        max-width: 350px;
+        height: 65vh;
+    }
+    .modal-content {
+        margin: auto;
+    }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (max-width: 992px) {
+    .kanban-column {
+        min-width: 390px; 
+        max-width: 390px;
+        height: 70vh;
+    }
+    .modal-content {
+        margin: auto;
+    }
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (max-width: 1200px) {
+    .kanban-column {
+        min-width: 320px; 
+        max-width: 320px;
+        height: 75vh;
+    }
+    .modal-content {
+        margin: auto;
+    }
+}
+
+
+
