--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -115,11 +115,17 @@ body, html {
     top: 70px;
     right: 10px;
     width: auto;
-    z-index: 9999;
+    z-index: 1050;
 }
 
 .alert {
     margin-bottom: 10px;
+    padding: 15px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    z-index: 1051; 
+    background-color: #f8d7da;
+    color: #721c24; 
 }
 
 .alert-success {
@@ -131,6 +137,7 @@ body, html {
     background-color: #f8d7da;
     color: #721c24;
 }
+
 
 #loadingSpinner {
     position: fixed;
